--- a/src/polython17-app/polython17-app.html
+++ b/src/polython17-app/polython17-app.html
@@ -21,7 +21,7 @@
         return {
           prop1: {
             type: String,
-            value: 'polython17-app Hola'
+            value: 'polython17-app Holas'
           }
         };
       }
