--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="/src/polython17-app/polython17-app.html">
+    <link rel="import" href="/src/polython-app/polython-app.html">
   </head>
   <body>
-    <polython17-app></polython17-app>
+    <polython-app></polython-app>
   </body>
 </html>
