--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>Polython</title>
+  <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="import" href="polython-17-app.html">
 </head>
 <body>
