--- a/public/polython-17-app.html
+++ b/public/polython-17-app.html
@@ -1,5 +1,5 @@
 <link rel="import" href="bower_components/polymerfire/firebase-app.html">
-<link rel="import" href="my-login.html">
+<link rel="import" href="./containers/login-container/login-container.html">
 
 <dom-module id="polython-17-app">
   <template>
@@ -11,7 +11,7 @@
       storage-bucket="polython2017-bddab.appspot.com"
       messaging-sender-id="115715758548">
     </firebase-app>
-    <my-login></my-login>
+    <login-container></login-container>
   </template>
 
   <script>
