--- a/public/polython-17-app.html
+++ b/public/polython-17-app.html
@@ -1,6 +1,8 @@
 <link rel="import" href="bower_components/polymerfire/firebase-app.html">
-<link rel="import" href="./containers/login-container/login-container.html">
-
+<!-- <link rel="import" href="./containers/login-container/login-container.html"> -->
+<link rel="import" href="./containers/login-container/create-user.html">
+<link rel="import" href="./containers/login-container/my-login.html">
+link:<link rel="import" href="./containers/login-container/log-add.html">
 <dom-module id="polython-17-app">
   <template>
 
@@ -11,7 +13,10 @@
       storage-bucket="polython2017-bddab.appspot.com"
       messaging-sender-id="115715758548">
     </firebase-app>
-    <login-container></login-container>
+    <!-- <login-container></login-container> -->
+    <!-- <my-login></my-login>
+    <my-user></my-user> -->
+    <log-add></log-add>
   </template>
 
   <script>
