--- a/public/containers/welcome-container/welcome-container.html
+++ b/public/containers/welcome-container/welcome-container.html
@@ -1,19 +1,75 @@
+<link rel="import" href="../../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
+<link rel="import" href="../../bower_components/app-layout/app-drawer/app-drawer.html">
+<link rel="import" href="../../bower_components/app-layout/app-header/app-header.html">
+<link rel="import" href="../../bower_components/app-layout/app-header-layout/app-header-layout.html">
+<link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="welcome-container">
   <template>
     <style>
-      :host {
-        display: block;
-      }
+      app-header {
+	      background-color: var(--paper-blue-500);
+	      color: #fff;
+	    }
+	    app-header paper-icon-button {
+	      --paper-icon-button-ink-color: #fff;
+	    }
+	    app-drawer-layout {
+	      --app-drawer-layout-content-transition: margin 0.2s;
+	    }
+	    app-drawer {
+	      --app-drawer-content-container: {
+	        background-color: #eee;
+	      }
+	    }
+	    .drawer-content {
+	      margin-top: 80px;
+	      overflow: auto;
+	    }
     </style>
-    <h2>Hola Bienvenido</h2>
+    <app-header-layout>
+
+	    <app-header fixed effects="waterfall" slot="header">
+	      <app-toolbar>
+	        <paper-icon-button id="toggle" icon="menu"></paper-icon-button>
+	        <div main-title>[[userName]]</div>
+	      </app-toolbar>
+	    </app-header>
+
+	    <app-drawer-layout id="drawerLayout">
+
+	      <app-drawer slot="drawer">
+	        <div class="drawer-content">
+	          <paper-icon-item>
+	            <iron-icon icon="inbox" slot="item-icon"></iron-icon> <span>Perfil</span>
+	          </paper-icon-item>
+	          <paper-icon-item>
+	            <iron-icon icon="query-builder" slot="item-icon"></iron-icon> <span>Tarjeta</span>
+	          </paper-icon-item>
+	          <paper-icon-item>
+	            <iron-icon icon="done" slot="item-icon"></iron-icon> <span>Configuraciones</span>
+	          </paper-icon-item>
+	        </div>
+	      </app-drawer>
+	      
+	      <sample-content size="100"></sample-content>
+
+	    </app-drawer-layout>
+
+	  </app-header-layout>
   </template>
   <script>
     class WelcomeContainer extends Polymer.Element {
       static get is() {return 'welcome-container'};
       static get properties() {
         return {
-          propiedades
+          userName:{
+          	type: String, 
+          	value: 'Damian Ruiz'
+          } 
         }
       }
     }
