[update] actualizacion de tarjetas de usuario

--- a/public/polython-17-app.html
+++ b/public/polython-17-app.html
@@ -3,6 +3,7 @@
 <link rel="import" href="./containers/login-container/create-user.html">
 <link rel="import" href="./containers/login-container/my-login.html">
 <link rel="import" href="./containers/login-container/log-add.html">
+<link rel="import" href="./containers/show-cards/show-cards.html">
 
 <dom-module id="polython-17-app">
   <template>
@@ -15,7 +16,8 @@
       messaging-sender-id="115715758548">
     </firebase-app>
     <!-- <routes-container></routes-container> -->
-    <log-add></log-add>
+    <!-- <log-add></log-add> -->
+    <show-cards></show-cards>
   </template>
 
   <script>
