--- a/public/containers/perfil-container/perfil-container.html
+++ b/public/containers/perfil-container/perfil-container.html
@@ -4,8 +4,11 @@
       :host {
         display: block;
       }
+      h2{
+      	font-family: 'Roboto', sans-serif;
+      }
     </style>
-    <h2>[[userName]]</h2>
+    <h2>Perfil</h2>
   </template>
   <script>
     class PerfilContainer extends Polymer.Element {
