--- a/public/containers/welcome-container/welcome-container.html
+++ b/public/containers/welcome-container/welcome-container.html
@@ -6,9 +6,12 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../../../bower_components/polymerfire/firebase-auth.html">
 <link rel="import" href="../perfil-container/perfil-container.html">
 <link rel="import" href="../show-cards/show-cards.html">
+<link rel="import" href="../stats-container/stats-container.html">
+<link rel="import" href="../moves-container/moves-container.html">
 
 <dom-module id="welcome-container">
   <template>
@@ -20,6 +23,10 @@
 	      background-color: var(--paper-blue-500);
 	      color: #fff;
 	    }
+	    app-drawer a {
+        color: inherit;
+        text-decoration: none;
+      }
 	    app-header paper-icon-button {
 	      --paper-icon-button-ink-color: #fff;
 	    }
@@ -42,9 +49,21 @@
         display: inline-block;
         vertical-align: middle;
       }
+      app-drawer paper-listbox {
+        --paper-listbox-background-color: transparent;
+        --paper-listbox-color: var(--drawer-color);
+      }
+      app-drawer paper-listbox paper-item {
+        font-size: 11pt;
+      }
+      app-drawer paper-item.iron-selected {
+        color: white;
+      }
     </style>
-    <app-header-layout>
+    <app-route route="{{route}}" pattern="/:module" data="{{moduleData}}"></app-route>
+    <app-route route="{{route}}" pattern="/perfil" tail="{{perfilRoute}}"></app-route>
 
+    <app-header-layout>
 	    <app-header fixed effects="waterfall" slot="header">
 	      <app-toolbar>
           <div main-title class="title-main">
@@ -57,9 +76,7 @@
           <span class="hide-on-small-only username-span">[[userName]]</span>
           <paper-menu-button horizontal-align="right">
             <paper-icon-button icon="more-vert" slot="dropdown-trigger"></paper-icon-button>
-            <paper-listbox slot="dropdown-content">
-              <paper-item on-click="logOut"><iron-icon icon="exit-to-app"></iron-icon> Cerrar sesión</paper-item>
-            </paper-listbox>
+            <paper-item on-click="logOut"><iron-icon icon="exit-to-app"></iron-icon> Cerrar sesión</paper-item>
           </paper-menu-button>
         </app-toolbar>
 	    </app-header>
@@ -68,27 +85,60 @@
 
 	      <app-drawer slot="drawer">
 	        <div class="drawer-content">
-	          <paper-icon-item>
-	            <iron-icon icon="icons:perm-identity" slot="item-icon"></iron-icon> <span>Perfil</span>
-	          </paper-icon-item>
-	          <paper-icon-item>
-	            <iron-icon icon="icons:credit-card" slot="item-icon"></iron-icon> <span>Cuentas</span>
-	          </paper-icon-item>
-	          <paper-icon-item>
-	            <iron-icon icon="icons:swap-horiz" slot="item-icon"></iron-icon> <span>Movimientos</span>
-	          </paper-icon-item>
-	          <paper-icon-item>
-	            <iron-icon icon="icons:trending-up" slot="item-icon"></iron-icon> <span>Estadísticas</span>
-	          </paper-icon-item>
+		        <paper-listbox selected="{{pages}}" attr-for-selected="name">
+		        	<a href="[[rootPath]]welcome/perfil" name="perfil" >
+				        <paper-icon-item>
+			            <iron-icon icon="icons:perm-identity" slot="item-icon"></iron-icon> <span>Perfil</span>
+			          </paper-icon-item>
+			        </a>
+			        <a href="[[rootPath]]welcome/cuentas" name="cuentas" >
+			          <paper-icon-item>
+			            <iron-icon icon="icons:credit-card" slot="item-icon"></iron-icon> <span>Cuentas</span>
+			          </paper-icon-item>
+			        </a>
+			        <a href="[[rootPath]]welcome/movimientos" name="movimientos" >
+			          <paper-icon-item>
+			            <iron-icon icon="icons:swap-horiz" slot="item-icon"></iron-icon> <span>Movimientos</span>
+			          </paper-icon-item>
+			        </a>
+			        <a href="[[rootPath]]welcome/estadisticas" name="estadisticas" >
+			          <paper-icon-item>
+			            <iron-icon icon="icons:trending-up" slot="item-icon"></iron-icon> <span>Estadísticas</span>
+			          </paper-icon-item>
+			        </a>
+	          </paper-listbox>
 	        </div>
 	      </app-drawer>
 	      <sample-content size="100"></sample-content>
 
-	      <show-cards></show-cards>
+	      <iron-pages selected="{{pages}}" attr-for-selected="name" selected-attribute="active">
+	      	<show-cards name="cuentas"></show-cards>
+	      	<perfil-container name="perfil"></perfil-container>
+	      	<stats-container name="estadisticas"></stats-container>
+	      	<moves-container name="movimientos"></moves-container>
+				</iron-pages>
 	    </app-drawer-layout>
 	  </app-header-layout>
   </template>
   <script>
+  	const generalRouteDirectory = {
+      perfil: {
+        route:  '../perfil-container/perfil-container.html',
+        title: 'perfil'
+      },
+      cuentas: {
+        route:  '../show-cards/show-cards.html',
+        title: 'cuentas'
+      },
+      movimientos: {
+        route:  '../moves-container/moves-container.html',
+        title: 'movimientos'
+      },
+      estadisticas: {
+        route:  '../stats-container/stats-container.html',
+        title: 'estadisticas'
+      }
+    }
     class WelcomeContainer extends Polymer.Element {
       static get is() {return 'welcome-container'};
       static get properties() {
@@ -100,13 +150,43 @@
           session: {
           	type: Boolean,
           	notify: true
+          },
+          pages: String,
+          rootPath: {
+          	type: String,
+          	value: 'http://localhost:5000/#/'
           }
         }
+      }
+      static get observers(){
+      	return [
+      		'_subrouteChanged(moduleData.module)',
+      		'_moduleChanged(pages)'
+      	]
+      }
+      _subrouteChanged(page){
+      	console.log(page);
+        this.pages = page || 'perfil';
       }
       logOut(e){
         sessionStorage.clear();
         this.session = false;
         window.location = '/#/login';
+      }
+      getUrl2Component(key){
+        const container = generalRouteDirectory[key] || null;
+        if (container) return container.route;
+
+        return 'unrecognized.html'
+      }
+      showPage404() {
+        console.log('Ruta desconocida, falta validad error')
+      }
+      _moduleChanged(module){
+      	console.log(module)
+        const resolvedPageUrl = this.resolveUrl(this.getUrl2Component(module));
+
+        Polymer.importHref(resolvedPageUrl, null, this.showPage404.bind(this), true);
       }
     }
 
