--- a/public/containers/login-container/log-add.html
+++ b/public/containers/login-container/log-add.html
@@ -14,7 +14,7 @@
       </firebase-auth>
       <firebase-query
         id="query"
-        path="/users/[[user.uid]]"
+        path="/users/[[user.upython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vpython -Vid]]"
         data="{{notes}}">
       </firebase-query>
 
@@ -48,7 +48,7 @@
         return this.$.auth.signOut();
       },
       userObserver: function(user){
-        console.log(user)
+        // console.log(user)
         if(user){
           var userName= user.displayName;
           var userEmail= user.email;
