[update] actualizando tarjetas del usuario

--- a/public/containers/perfil-container/perfil-container.html
+++ b/public/containers/perfil-container/perfil-container.html
@@ -1,3 +1,8 @@
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+
 <dom-module id="perfil-container">
   <template>
     <style>
@@ -7,8 +12,60 @@
       h2{
       	font-family: 'Roboto', sans-serif;
       }
+      .contenido{
+        display: flex;
+        justify-content: center;
+      }
+      .profile{
+        width: 45%;
+        margin: 0 auto;
+      }
+      .cafe-header { @apply --paper-font-headline; }
+      .cafe-light { color: var(--paper-grey-600); }
+      .cafe-location {
+        float: right;
+        font-size: 15px;
+        vertical-align: middle;
+      }
+      .edit-profile { color: var(--google-blue-500); }
+      /*iron-icon.star {
+        --iron-icon-width: 16px;
+        --iron-icon-height: 16px;
+        color: var(--paper-amber-500);
+      }
+      iron-icon.star:last-of-type { color: var(--paper-grey-500); }*/
     </style>
-    <h2>Perfil</h2>
+    <div class="contenido">
+      <paper-card image="../../img/polython.png" class="profile" alt="imagen de perfil">
+        <div class="card-content">
+          <div class="cafe-header">[[userName]]
+            <div class="cafe-location cafe-light">
+              <iron-icon icon="communication:location-on"></iron-icon>
+              <span>250 pts</span>
+            </div>
+          </div>
+          <!-- <div class="cafe-rating">
+            <iron-icon class="star" icon="star"></iron-icon>
+            <iron-icon class="star" icon="star"></iron-icon>
+            <iron-icon class="star" icon="star"></iron-icon>
+            <iron-icon class="star" icon="star"></iron-icon>
+            <iron-icon class="star" icon="star"></iron-icon>
+          </div> -->
+          <p>$ 5030.00 MX</p>
+          <p class="cafe-light">Tarjeta de ocio.</p>
+        </div>
+        <div class="card-actions">
+          <p>Fecha de corte</p>
+          <div class="horizontal justified">
+            <paper-icon-button icon="icons:event"></paper-icon-button>
+            <paper-button>5:30PM</paper-button>
+            <paper-button>7:30PM</paper-button>
+            <paper-button>9:00PM</paper-button>
+          </div>
+          <paper-button class="edit-profile">Editar Perfil</paper-button>
+        </div>
+      </paper-card>
+    </div>
   </template>
   <script>
     class PerfilContainer extends Polymer.Element {
