--- a/public/containers/show-cards/show-cards.html
+++ b/public/containers/show-cards/show-cards.html
@@ -5,16 +5,19 @@
 <template>
     <style>
     h4{
-      margin: 5px;
+      margin: 15px;
       font-weight: bold;
-      font-size: large;
+      font-size: normal;
     },
     span{
       font-weight: lighter;
     }
+    .centrado{
+      padding:
+    }
     </style>
     <template is="dom-repeat" items="{{dataUserCards}}">
-    <paper-card heading="Emmental" image="http://placehold.it/350x150/FFC107/000000" alt="Emmental">
+    <paper-card heading="Elemental" image="[[item.imgCard]]" alt="Afiliacion">
       <div class="card-content">
         <h4>Nombre: <span>[[item.name]] [[item.lastname]]</span></h4>
         <h4>[[item.numberCard]]</h4>
@@ -25,7 +28,16 @@
         <paper-button>MORE DETAILS</paper-button>
       </div>
     </paper-card>
-    </template>
+  </template>
+    <br>
+    <div class="centrado">
+      <paper-card heading="Saldo Total" class="cyan">
+      <div class="card-actions">
+        <paper-icon-button icon="editor:attach-money" style="color:white;"></paper-icon-button>
+        <span>10,000.00 MX</span>
+      </div>
+    </paper-card>
+    </div>
 </template>
 <script>
   class ShowCards extends Polymer.Element {
@@ -36,9 +48,12 @@
             type: Array,
             value() {
               return [
-                {name: 'Bob', lastname: 'Smith', numberCard: 'xxxx xxxx xxxx xxxx', dateCard: '11/18'},
-                {name: 'Sally', lastname: 'Johnson', numberCard: 'xxxx xxxx xxxx xxxx', dateCard: '12/19'},
-                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx xxxx', dateCard: '10/20'},
+                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx 1234', dateCard: '11/18', imgCard: '"../../img/cardImage.png"'},
+                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx 54321', dateCard: '12/19', imgCard: '"../../img/cardImage.png"'},
+                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx 6789', dateCard: '10/20', imgCard: '"../../img/cardImage.png"'},
+                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx 9876', dateCard: '9/21', imgCard: '"../../img/cardImage.png"'},
+                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx 1121', dateCard: '9/19', imgCard: '"../../img/cardImage.png"'},
+                {name: 'Jhon', lastname: 'Wick', numberCard: 'xxxx xxxx xxxx 8042', dateCard: '9/20', imgCard: '"../../img/cardImage.png"'}
               ];
             }
           }
