--- a/public/containers/welcome-container/welcome-container.html
+++ b/public/containers/welcome-container/welcome-container.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../../bower_components/paper-avatar/paper-avatar.html">
 <link rel="import" href="../../../bower_components/polymerfire/firebase-auth.html">
 <link rel="import" href="../perfil-container/perfil-container.html">
 <link rel="import" href="../show-cards/show-cards.html">
@@ -72,10 +73,9 @@
               <span class="title-app">Gestor Financiero</span>
             </div>
           </div>
-          <paper-avatar label="R" class="green" two-charts ></paper-avatar> 
+          <paper-avatar label="{{userName}}" class="green" two-charts style="margin: 12px;"></paper-avatar> 
           <span class="hide-on-small-only username-span">[[userName]]</span>
           <paper-menu-button horizontal-align="right">
-            <paper-icon-button icon="more-vert" slot="dropdown-trigger"></paper-icon-button>
             <paper-item on-click="logOut"><iron-icon icon="exit-to-app"></iron-icon> Cerrar sesión</paper-item>
           </paper-menu-button>
         </app-toolbar>
@@ -179,7 +179,10 @@
         return 'unrecognized.html'
       }
       showPage404() {
-        console.log('Ruta desconocida, falta validad error')
+        console.log('Ruta desconocida, falta validad error');
+      }
+      initialL(){
+      	return this.userName.substring(0, 0);
       }
       _moduleChanged(module){
         const resolvedPageUrl = this.resolveUrl(this.getUrl2Component(module));
