--- a/public/containers/welcome-container/welcome-container.html
+++ b/public/containers/welcome-container/welcome-container.html
@@ -154,7 +154,7 @@
           pages: String,
           rootPath: {
           	type: String,
-          	value: 'http://localhost:5000/#/'
+          	value: 'https://polython2017-bddab.firebaseapp.com/#/'
           }
         }
       }
